--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>Hallo!</h1>
+<iframe src="https://www.google.com/maps/d/embed?mid=1hQF1kaVUfnR1ck9bD11Xl3Agt4xu2Bw&hl=de&ehbc=2E312F" width="640" height="480"></iframe>
